--- a/style.html
+++ b/style.html
@@ -2,9 +2,19 @@
 <html>
     <head>
         <title>form</title>
+        <!-- <style>
+            h1 {
+                color: aqua;
+                text-align: center;
+            }
+        </style> -->
+        <link rel="stylesheet" href="style.css">
     </head>
+    <!-- <body style="color: aqua; text-align: center;"> -->
     <body>
-        <h1>Welcome to my Web Page!</h1>
+        <!-- <h1 body style="color: aqua; text-align: center;">Welcome to my Web Page!</h1>-->
+         <h1>Welcome to my Web Page!</h1>
+         <h1>This is a second heading</h1>
         hello, world!
     </body>
 </html>
