--- a/table.html
+++ b/table.html
@@ -2,6 +2,18 @@
 <html>
     <head>
         <title>Table</title>
+        <style>
+            table {
+                border: 2px solid blueviolet;
+                border-collapse: collapse;/* 表の枠をくっつけて普通のフォーマットにする */
+            }
+
+            th, td {
+                border: 1.5px solid skyblue;
+                padding: 5px;
+            }
+
+        </style>
     </head>
     <body>
         <table>
